--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="builds/Sdf-Collision.ipa"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -23,17 +23,17 @@ script_export_mode=2
 custom_template/debug=""
 custom_template/release=""
 architectures/arm64=true
-application/app_store_team_id=""
+application/app_store_team_id="22R85DDBLV"
 application/export_method_debug=1
 application/code_sign_identity_debug=""
 application/code_sign_identity_release=""
 application/provisioning_profile_specifier_debug=""
 application/provisioning_profile_specifier_release=""
-application/export_method_release=0
-application/bundle_identifier=""
+application/export_method_release=1
+application/bundle_identifier="co.orkestra.gcv6"
 application/signature=""
-application/short_version=""
-application/version=""
+application/short_version="0.1"
+application/version="0.1.1"
 application/additional_plist_content=""
 application/icon_interpolation=4
 application/export_project_only=false
@@ -253,7 +253,7 @@ icons/ios_136x136_tinted=""
 icons/app_store_1024x1024=""
 icons/app_store_1024x1024_dark=""
 icons/app_store_1024x1024_tinted=""
-application/targeted_device_family=2
+application/targeted_device_family=0
 application/min_ios_version="14.0"
 storyboard/image_scale_mode=0
 storyboard/custom_image@2x=""
